--- a/app/src/main/res/layout/exo_playback_control_view_tv.xml
+++ b/app/src/main/res/layout/exo_playback_control_view_tv.xml
@@ -28,7 +28,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha=".6"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/black"/>
+
+
+    <ImageView
+        android:id="@+id/closeButton"
+        android:layout_width="30dp"
+        android:layout_height="28dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="5dp"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
+        android:src="@mipmap/player_back_btn"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -210,7 +226,7 @@
 
         </FrameLayout>
 
-        <com.multitv.ott.multitvvideoplayer.timebar.PreviewTimeBar
+        <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
             android:id="@+id/exo_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
