--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -37,6 +37,8 @@
             android:background="?attr/selectableItemBackground"
             android:padding="5dp"
             android:focusable="true"
+            android:focusedByDefault="true"
+            android:focusableInTouchMode="true"
             android:src="@mipmap/player_back_btn" />
 
 
@@ -127,7 +129,6 @@
                 android:src="@drawable/pervious"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:visibility="gone" />
 
 
@@ -146,7 +147,6 @@
                     android:layout_marginRight="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:focusedByDefault="true"
                     android:background="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
@@ -169,7 +169,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_pause" />
 
@@ -181,7 +180,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_play" />
 
@@ -209,7 +207,6 @@
                     android:layout_marginLeft="10dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:focusedByDefault="true"
                     android:background="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
@@ -226,7 +223,6 @@
                 android:src="@drawable/next"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:background="?attr/selectableItemBackground"
                 android:visibility="gone" />
 
@@ -271,7 +267,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
@@ -287,7 +282,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:src="@drawable/next_epsode"
                 android:visibility="gone" />
 
@@ -302,7 +296,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:src="@drawable/ic_balaji_volume_on" />
 
             <SeekBar
@@ -314,7 +307,6 @@
                 android:maxHeight="8dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:background="?attr/selectableItemBackground"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
@@ -360,7 +352,6 @@
                     android:padding="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:focusedByDefault="true"
                     android:background="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_volume_on" />
 
@@ -374,7 +365,6 @@
                     android:padding="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:focusedByDefault="true"
                     android:background="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
@@ -392,7 +382,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:src="@drawable/ic_balaji_setting" />
 
             <ImageView
@@ -405,7 +394,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:visibility="gone"
                 android:src="@drawable/ic_balaji_pip" />
 
@@ -417,7 +405,6 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:focusedByDefault="true"
                 android:visibility="gone"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_fullscreen" />
