--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -34,7 +34,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackground"
+            android:foreground="?attr/selectableItemBackground"
             android:padding="5dp"
             android:focusable="true"
             android:focusedByDefault="true"
@@ -141,13 +141,13 @@
 
                 <ImageView
                     android:id="@id/exo_rew"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:background="?attr/selectableItemBackground"
+                    android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_backward_10_sec" />
 
                 <TextView
@@ -169,7 +169,7 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_pause" />
 
             <ImageView
@@ -180,7 +180,7 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_play" />
 
 
@@ -207,7 +207,7 @@
                     android:layout_marginLeft="10dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:background="?attr/selectableItemBackground"
+                    android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_farward_10_sec" />
 
 
@@ -223,7 +223,7 @@
                 android:src="@drawable/next"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:visibility="gone" />
 
         </LinearLayout>
@@ -267,7 +267,7 @@
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/webseries"
                 android:visibility="gone" />
 
@@ -278,7 +278,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -292,7 +292,7 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:padding="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -307,7 +307,7 @@
                 android:maxHeight="8dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:progressDrawable="@drawable/seekbar_progress_style"
                 android:thumb="@drawable/seekbar_thumb"
                 android:thumbOffset="0dp" />
@@ -352,7 +352,7 @@
                     android:padding="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:background="?attr/selectableItemBackground"
+                    android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_volume_on" />
 
 
@@ -365,7 +365,7 @@
                     android:padding="5dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:background="?attr/selectableItemBackground"
+                    android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
 
@@ -406,7 +406,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:visibility="gone"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/ic_balaji_fullscreen" />
 
 
@@ -439,7 +439,7 @@
         app:previewAnimationEnabled="false"
         app:previewFrameLayout="@id/previewFrameLayout"
         app:scrubber_dragged_size="24dp"
-        android:background="?attr/selectableItemBackground"
+        android:foreground="?attr/selectableItemBackground"
         app:scrubber_enabled_size="16dp" />
 
     <!--    <TextView-->
